--- a/WebApp/Areas/Paquetes/Pages/Update.cshtml
+++ b/WebApp/Areas/Paquetes/Pages/Update.cshtml
@@ -91,13 +91,13 @@
                         </div>
                     </div>
                     <div style="display: flex; justify-content: space-around;">
-                        <button type="submit" class="btn btn-outline-success">
+                        <button type="submit" class="btn Btn-outline-Hex">
                             <i class="fas fa-share-square"></i>
-                            Actualizar paquete
+                            <b>Actualizar paquete</b>
                         </button>
-                        <button type="reset" class='btn btn-outline-warning'>
+                        <button type="reset" class='btn btn-outline-danger'>
                             <i class="fas fa-sync-alt"></i>
-                            Recuperar los datos originales
+                            <b>Recuperar los datos originales</b>
                         </button>
                     </div>
                 </form>
