--- a/WebApp/Areas/Administrador/Pages/Envio_Finalizado.cshtml
+++ b/WebApp/Areas/Administrador/Pages/Envio_Finalizado.cshtml
@@ -104,4 +104,10 @@
     <!--SweetAlert2-->
     <script src = "~/plugins/sweetalert2/sweetalert2.min.js" ></script>
     @await Component.InvokeAsync("Notyf");
+
+    <script>
+        $(document).ready(function () {
+            $('#a-rechazado').addClass('active');
+        });
+    </script>
 }
