--- a/WebApp/Pages/Shared/_Layout.cshtml
+++ b/WebApp/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
     <!--Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+    <link href="~/css/StyleSheet1.css" rel="stylesheet" />
     @await RenderSectionAsync("Styles", required: false)
 </head>
 <body class="hold-transition sidebar-mini layout-navbar-fixed">
@@ -72,7 +72,7 @@
                                 </p>
                             </a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item"> 
                             <a asp-area="Administrador" asp-page="Index" class="nav-link" id="a-chequeo">
                                 <i class="fas fa-search"></i>
                                 <p>
@@ -81,7 +81,15 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a asp-area="Administrador" asp-page="Envios_En_Progreso" class="nav-link" id="a-proceso">
+                            <a asp-area="Administrador" asp-page="Envios_Rechazados" class="nav-link" id="a-rechazado">
+                                <i class="fas fa-truck-loading"></i>
+                                <p>
+                                    Envíos rechazados
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a asp-area="Administrador" asp-page="Envios_En_Progreso" class="nav-link" id="a-progreso">
                                 <i class="fas fa-people-carry"></i>
                                 <p>
                                     Envíos en proceso
@@ -96,35 +104,6 @@
                                 </p>
                             </a>
                         </li>
-                        @*<li class="nav-item">
-            <a href="javascript:;" class="nav-link">
-                <i class="nav-icon far fa-envelope"></i>
-                <p>
-                    Mailbox
-                    <i class="fas fa-angle-left right"></i>
-                </p>
-            </a>
-            <ul class="nav nav-treeview">
-                <li class="nav-item">
-                    <a href="../mailbox/mailbox.html" class="nav-link">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>Inbox</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="../mailbox/compose.html" class="nav-link">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>Compose</p>
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a href="../mailbox/read-mail.html" class="nav-link">
-                        <i class="far fa-circle nav-icon"></i>
-                        <p>Read</p>
-                    </a>
-                </li>
-            </ul>
-        </li>*@
                     </ul>
                 </nav>
                 <!-- /.sidebar-menu -->
